GDB-13350: Fix dark theme color issues
## What
- Add color to the label in Class Relationships using design system variables;
- Add color to the label in Vizual Graph using design system variables;
- Fix the color of the All Graphs dropdown in the Class Hierarchy.

## Why
- The color was not set, causing the label to be invisible in the dark theme;
- The color was not set, causing the label to be invisible in the dark theme;
- There were CSS rules that set the button color to white.

## How
- Set the color to --gw-body-color;
- Set the color to --gw-body-color;
- Remove the CSS rules that set the colors. In the Class Relationships view, the dropdown Bootstrap class has been reorganized to apply the correct styles of the All Graphs dropdown.

--- a/packages/legacy-workbench/src/css/dependencies.css
+++ b/packages/legacy-workbench/src/css/dependencies.css
@@ -208,6 +208,10 @@ body .row {
     width: 100%;
 }
 
+.dependencies-chord-label {
+    fill: var(--gw-body-color);
+}
+
 .related-arrow {
     padding-left: 0;
     padding-right: 0;
@@ -220,13 +224,4 @@ body .row {
 
 .deps-sidebar {
     font-size: 14px;
-}
-
-#graphsBtnGroup[aria-expanded="false"] {
-    background-color: white;
-    border: none;
-}
-
-#graphsBtnGroup[aria-expanded="true"] {
-    color: inherit;
 }
