--- a/packages/legacy-workbench/src/css/graphs-vizualizations.css
+++ b/packages/legacy-workbench/src/css/graphs-vizualizations.css
@@ -139,6 +139,12 @@
     text-align: center;
     height: 100%;
     align-content: center;
+    color: var(--gw-body-color);
+}
+
+
+.link-wrapper {
+    fill: var(--gw-body-color);
 }
 
 .node-wrapper .pinned {
